2002-03-20  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-value.c (gda_value_stringify): added support for
	GDA_TYPE_NUMERIC.
	* providers/postgres/gda-postgres-provider.c: added support for
	getting references. Changed some variable names.
	* providers/postgres/utils.c: added support for GDA_TYPE_NUMERIC.
	Removed some functions not used any more.
	(gda_postgres_set_field_data): don't use g_new0/g_free unless
	absolutely necessary. Don't set actual size as gda_field_set_*_value()
	already does it.

2002-03-19  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-parameter.c: include new file to remove warning.
	* providers/postgres/gda-postgres-provider.c: fix a crash when a table
	has no indexes for SCHEMA_FIELDS. Corrected defined size data for
	SCHEMA_FIELDS.
	* providers/postgres/utils.c: removed some TODO/FIXME lines.

2002-03-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-server-connection.c (impl_Connection_getSchema): if there
	are no errors, return an empty recordset.

2002-03-19  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-parameter.c: initialize corba_list->_length. Changed
	CORBA_Object_duplicate () by ORBit_RootObject_duplicate ().

2002-03-19  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* providers/postgres/utils.c: fix little mistake when mapping boolean
	type from postgres to gda.

2002-03-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-parameter.[ch] (gda_parameter_new_string): new function.
	(gda_parameter_list_to_corba): finished implementation.

2002-03-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/default/GNOME_Database_Provider_Default.server.in: use
	URI instead of FILENAME, since we'll be able to support remote files.

	* providers/default/gda-default-provider.c
	(gda_default_provider_open_connection): use URI instead of FILENAME.

	* libgda/gda-util.c (gda_file_load): create a GnomeVFSURI instead of
	using the URI string directly.
